fixed table issue dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
     --primary-color: #ba0006;
     --secondary-color: #f2f2f2;
     --dark: #232323;
-    --darkGray: #474747;
+    --gray: #bbbbbb;
+    --darkGray: #717171;
 
     --quarter: 25rem;
 }
@@ -43,6 +44,7 @@ html {
 body {
     font-family: var(--primary-font);
     font-size: 16px;
+    background-color: var(--secondary-color);
     /* 1rem = 10px */
 }
 
@@ -107,7 +109,7 @@ p {
 .ball-gray {
     width: 120%;
     height: 40rem;
-    background-color: var(--secondary-color);
+    background-color: var(--gray);
     border-radius: 50%;
     position: absolute;
     z-index: -2;
@@ -181,6 +183,10 @@ h3 {
 
 .contacts>p {
     display: flex;
+}
+
+#tableDynamic {
+    box-shadow: 0px 0px 2px #000;
 }
 
 button {
@@ -291,9 +297,6 @@ table {
     margin: 0 auto;
 }
 
-table td {
-    background-color: white;
-}
 
 td:not(.none) {
     border: 1px solid var(--secondary-color);
@@ -310,7 +313,7 @@ td:not(.none) {
 }
 
 table .titles td {
-    background-color: #f2f2f2;
+    background-color: var(--gray);
     font-weight: bold;
 }
 
